ci: publish snyk report always (ignore failures on previous snyk scan step)

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           args: --sarif-file-output=snyk.sarif
       - name: Upload Snyk report to GitHub Code Scanning
+        if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
