--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -18,11 +18,12 @@ jobs:
           gradle-version: '9.0.0'
       - name: Build with Gradle
         run: ./gradlew spotbugsMain
-      - name: Upload SpotBugs report
-        uses: actions/upload-artifact@v4
+      - name: Upload SpotBugs report to GitHub Code Scanning
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          name: spotbugs-report
-          path: build/reports/spotbugs/main.html
+          sarif_file: build/reports/spotbugs/main.sarif
+          category: SAST
 
   snyk-sca:
     runs-on: ubuntu-latest
@@ -45,3 +46,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
+          category: SCA
