--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,5 +1,10 @@
 name: security
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    types: [ opened, edited ]
+    branches: [ master ]
 
 jobs:
   spotbugs-sast:
